# container-vuln-scanner

./: ..gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  License  README.md  SECURITY.md  pyproject.toml  requirements.txt
scanner/: cis_checker.py  cve_scanner.py  dockerfile_parser.py
tests/: test_scanner.py
